Archivo-css-en-html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       type="image/x-icon"
       sizes="96x96"
     />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Join Our Newsletter</title>
   </head>
   <body>
