--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       sizes="96x96"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Join Our Newsletters</title>
+    <title>Join Our Newsletterss</title>
   </head>
   <body>
     <!-- 
